# artoolkitplus-ts

./: .babelrc  .gitignore  .gitmodules  .npmignore  .prettierignore  CMakeLists.txt  README.md  build.sh  package-lock.json  package.json  prettierc.json  tsconfig.json  webpack.config.js
.devcontainer/: devcontainer.json
emscripten/: artoolkitplus-bindings.cpp  artoolkitplus_em.cpp  artoolkitplus_em.h  bindings.cpp  trackerMM-bindings.cpp  trackerMM.cpp  trackerMM.h  trackerSM-bindings.cpp  trackerSM.cpp  trackerSM.h
example/: example-pattern.html  example-ts-module.html  example-ts-xml.html  example-ts.html  example-video-hiro-ts.html  example-video-ts.html  example.html  example_ES6.html  example_TMM_ES6.html  example_TMM_ES6_new.html  loader.js  loader_ES6.js  loader_TMM_ES6.js  loader_TMM_ES6_new.js  loader_TMM_ES6_test.js  threejs-video-ts.html
example/css/: style.css
example/data/: PGR_M12x0.5_2.5mm.cal  data.xml  markerboard_480-481.cfg
js/: artoolkitplus_post.api.js  trackerSM_post.api.js
src/: ARToolKitPlus.ts  ARToolKitPlusLoader.ts  ARToolkitPlus.ts  ARToolkitPlusLoader.ts  TrackerSingleMarker.ts  TrackerSingleMarkerLoader.ts  Utils.ts  index.ts
src/abstractions/: AbstractARToolKitPlus.ts  AbstractARToolkitPlus.ts  AbstractTrackerSingleMarker.ts  CommonInterfaces.ts  interfaces.ts
types/src/: ARToolKitPlusLoader.d.ts  ARToolkitPlus.d.ts  ARToolkitPlusLoader.d.ts  TrackerSingleMarker.d.ts  TrackerSingleMarkerLoader.d.ts  index.d.ts
types/src/abstractions/: AbstractARToolkitPlus.d.ts  AbstractTrackerSingleMarker.d.ts  CommonInterfaces.d.ts  interfaces.d.ts
